[package]
name = "lilypad"
version = "0.2.0"
edition = "2021"

[lib]
name = "lilypad_web"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lilypad_native"
path = "src/bin.rs"

[profile.release]
lto = true

# # uncomment for debugging wasm:
# debug = true

# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false

[dependencies]
# egui
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "wgpu",
    "default_fonts", # TODO: load fonts instead of bundling them
] }
egui_inbox = "0.5"

# logging
log = "0.4"
env_logger = "0.11"

# text
ropey = { version = "1.6", default-features = false, features = ["simd"] }

# json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# utility
regex = { version = "1.9", default-features = false, features = [
    "std",
    "perf",
] }

# tree sitter
tree-sitter = "0.23"
tree-sitter-language = "0.1"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"

# wasm stuff
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

# native stuff
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.14"


[patch.crates-io]
# patch egui with my web event propagation fix
egui = { git = "https://github.com/liamrosenfeld/egui", branch = "web-event-propagation" }
eframe = { git = "https://github.com/liamrosenfeld/egui", branch = "web-event-propagation" }

# path tree-sitter with my copyable language function
tree-sitter = { git = "https://github.com/tree-sitter/tree-sitter" }
tree-sitter-language = { git = "https://github.com/tree-sitter/tree-sitter" }
