[package]
name = "lilypad"
version = "0.2.1"
edition = "2021"

[lib]
name = "lilypad_web"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lilypad_native"
path = "src/bin.rs"

[profile.release]
lto = true

# # uncomment for debugging wasm:
# debug = true

# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false

[dependencies]
# egui
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    "glow",
    "default_fonts", # TODO: load fonts instead of bundling them
] }
egui_inbox = "0.8"

# logging
log = "0.4"
env_logger = "0.11"

# text
ropey = { version = "1.6", default-features = false, features = ["simd"] }

# json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# utility
regex = { version = "1.9", default-features = false, features = [
    "std",
    "perf",
] }

# tree sitter
tree-sitter = "0.25"
tree-sitter-language = "0.1"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-rust = "0.24"

# wasm stuff
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
egui_commonmark = { version = "0.20.0", features = [
    "better_syntax_highlighting",
] }

# native stuff
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"

# include the highlight query constant commit
[patch.crates-io]
tree-sitter-c-sharp = { git = "https://github.com/tree-sitter/tree-sitter-c-sharp", branch = "master" }
